Search bar and logo added -- will break on large and small aspect ratios

--- a/cufdApp/src/app/app.component.html
+++ b/cufdApp/src/app/app.component.html
@@ -1,19 +1,25 @@
 <div class="container-fluid">
   <div class="row">
-    <img class="img-fluid img-thumbnail" id="logo" src="/assets/img/cfalogo.png" alt="logo">
+    <a href="/">
+      <img class="img-fluid img-thumbnail" id="logo" src="/assets/img/cfalogo.png" alt="logo">
+    </a>
+    <!-- Search Bar -->
     <div class="col search-bar-container">
-      <input class="search-bar" type="search" name="search" value="" placeholder="Search">
+        <img id="search-icon" src="/assets/img/search-icon.png" alt="search-icon">
+        <input class="search-bar" type="text" name="search" value="" placeholder="Search">
     </div>
   </div>
 
   <div class="row">
-
-    <div class="col">
       <!-- Navbar  -->
       <nav class="nav flex-column">
-        <a class="nav-link" href="#"> New </a>
-        <a class="My Requests" href="#">My Requests</a>
+        <a class="nav-link" href="#">New Request</a>
+        <a class="nav-link" href="#">My Requests</a>
+        <a class="nav-link" href="#">Filter</a>
       </nav>
+
+    <div class="col-md">
+      The Rest of Stuff
     </div>
 
   </div>
