added secondary navbar

--- a/cufdApp/src/app/app.component.html
+++ b/cufdApp/src/app/app.component.html
@@ -1,8 +1,10 @@
 <div class="container-fluid">
   <div class="row">
-    <a href="/">
+    <a class="logo-container" href="/">
       <img class="img-fluid img-thumbnail" id="logo" src="/assets/img/cfalogo.png" alt="logo">
     </a>
+    <div class="vertical-line">
+    </div>
     <!-- Search Bar -->
     <div class="col search-bar-container">
         <img id="search-icon" src="/assets/img/search-icon.png" alt="search-icon">
@@ -11,15 +13,48 @@
   </div>
 
   <div class="row">
-      <!-- Navbar  -->
-      <nav class="nav flex-column">
-        <a class="nav-link" href="#">New Request</a>
-        <a class="nav-link" href="#">My Requests</a>
-        <a class="nav-link" href="#">Filter</a>
-      </nav>
+    <!-- Navbar  -->
+    <nav class="nav flex-column main-nav">
+      <a class="nav-link" href="#">New Request</a>
+      <a class="nav-link" href="#">My Requests</a>
+      <a class="nav-link" href="#">Filter</a>
+    </nav>
 
     <div class="col-md">
-      The Rest of Stuff
+      <div class="row">
+        <nav class="navbar navbar-expand navbar-light nav-tabs secondary-nav">
+          <ul class="navbar-nav nav-fill">
+            <li class="nav-item">
+              <a class="nav-link btn btn-link active" href="#"> ID Number </a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link btn btn-link" href="#"> Type </a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link btn btn-link" href="#"> Status </a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link btn btn-link" href="#"> Title </a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link btn btn-link" href="#"> Priority </a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link btn btn-link" href="#"> Source </a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link btn btn-link" href="#"> Submission Date </a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link btn btn-link" href="#"> Updated On</a>
+            </li>
+          </ul>
+        </nav>
+      </div>
+
+      <div class="row">
+
+      </div>
     </div>
 
   </div>
