--- a/cufdApp/src/app/app.component.scss
+++ b/cufdApp/src/app/app.component.scss
@@ -17,6 +17,13 @@
   border-color: white;
 }
 
+.vertical-line {
+  border-left: thin solid #8E969C;
+  height: 100px;
+  margin-top: 2%;
+  margin-bottom:2%;
+}
+
 .search-bar-container {
   margin-top: 4%;
   margin-bottom: 4%;
@@ -39,7 +46,7 @@
   .search-bar {
     width: 50%;
     height: 120%;
-    padding: 10px 30px;
+    padding: 10px 30px 10px 30px;
     border-style: solid;
     border-radius: 30px;
     border-color: #dd0031;
@@ -49,9 +56,9 @@
     outline: none;
   }
 }
-// Nav
 
-nav {
+// Main Nav
+.main-nav {
   background-color: #66747e;
   width: 150px;
   text-align: center;
@@ -59,5 +66,13 @@ nav {
     color: white;
     height: 100px;
     padding: 2.5em 1em;
+  }
+}
+
+// Secondary Nav
+.secondary-nav {
+  width: 100%;
+  ul {
+    width: 100%;
   }
 }
