--- a/cufdApp/src/app/app.component.html
+++ b/cufdApp/src/app/app.component.html
@@ -8,7 +8,6 @@
     </div>
     <!-- Search Bar -->
     <div class="col search-bar-container">
-        <!-- <img id="search-icon" src="/assets/img/search-icon.png" alt="search-icon"> -->
         <i id="search-icon" class="material-icons">search</i>
         <a class="help-icon-container" href="#">
           <i id=help-icon class="material-icons">help_outline</i>
@@ -22,45 +21,47 @@
     <nav class="nav flex-column main-nav">
       <a class="nav-link" href="#">New Request</a>
       <a class="nav-link" href="#">My Requests</a>
-      <a class="nav-link" href="#">Filter</a>
+      <a class="btn btn-primary" href="#filter-collapse" data-toggle="collapse" role="button" aria-controls="filter-collapse"> Filter </a>
+
+      <div class="collapse" id="filter-collapse">
+        My Filters Here
+      </div>
     </nav>
 
     <div class="col-md">
-      <div class="row">
-        <!-- Secondary Navbar -->
-        <nav class="navbar navbar-expand navbar-light nav-tabs secondary-nav">
-          <ul class="navbar-nav nav-fill">
-            <li class="nav-item">
-              <a class="nav-link btn btn-link active" href="#"> ID Number </a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link btn btn-link" href="#"> Type </a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link btn btn-link" href="#"> Status </a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link btn btn-link" href="#"> Title </a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link btn btn-link" href="#"> Priority </a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link btn btn-link" href="#"> Source </a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link btn btn-link" href="#"> Submission Date </a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link btn btn-link" href="#"> Updated On</a>
-            </li>
-          </ul>
-        </nav>
-      </div>
+      <!-- Secondary Navbar -->
+      <!-- <div class="row nav-tabs">
+        <div class="col nav-item">
+          <a class="nav-link btn btn-link" href="#"> ID Number </a>
+        </div>
+        <div class="col nav-item">
+          <a class="nav-link btn btn-link" href="#"> Status</a>
+        </div>
+        <div class="col nav-item">
+          <a class="nav-link btn btn-link" href="#"> Priorty </a>
+        </div>
+        <div class="col nav-item">
+          <a class="nav-link btn btn-link" href="#"> Short Description </a>
+        </div>
+        <div class="col nav-item">
+          <a class="nav-link btn btn-link" href="#"> Description </a>
+        </div>
+        <div class="col nav-item">
+          <a class="nav-link btn btn-link" href="#"> Actions Taken </a>
+        </div>
+        <div class="col nav-item">
+          <a class="nav-link btn btn-link" href="#"> Submission Date </a>
+        </div>
+        <div class="col nav-item">
+          <a class="nav-link btn btn-link" href="#"> Updated On </a>
+        </div>
+        <div class="col nav-item">
+          <a class="nav-link btn btn-link" href="#"> Source </a>
+        </div>
+      </div> -->
 
-      <div class="row">
-
-      </div>
+      <app-tickets>
+      </app-tickets>
     </div>
 
   </div>
